@startuml
'https://plantuml.com/class-diagram

title Diagrama de Clase de Ronda
skinparam monochrome true
hide circle
skinparam classAttributeIconSize 0
class Ronda{
    +Ronda(Pregunta pregunta,ArrayList<jugador> jugadores);
    +jugarRonda():void;
}
class Resultado{
    -puntosRonda:ArrayList<Integer>
    +agregarPuntaje(int puntos):void
    +usarModificador(Modificador modificador, int jugadorPosicion):void;
    +obtenerPuntosDeJugador(int posicionJugador):int;
    +asignarPuntosALosJugador(ArrayList<jugador> jugadores):void
}

interface Pregunta{
    -responder(ArrayList<Respuesta>:respuestas):Resultado
    +mismold(int d):boolean
}

class Jugador{
    -nombre:String
    +Jugador(String nombre)
    +obtenerRespuesta():Respuesta
    +obtenerModificador():Modificacdor;
    +asignarPUntos():void
    +obtenerPuntaje():int
}
interface Modificacdor{
    +aplicar(ArrayList<Interger> puntajeRonda, int jugadorPosicion):void
}
Ronda .up.> Modificacdor
Ronda --> Pregunta
Ronda .left.> Resultado
Ronda o-- Jugador
@enduml